remove margins on profile to avoid horizontal scroll on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -34,14 +34,15 @@ nav>ul>li>a:hover{
 }
 /* style the image and name section */
 .image-name{   
-    color: white;
-    margin-left: 30%;
+    color: white;    
 }
 .image-name>img{
     margin-top: -7.5%;
 }
 .image-name>p{
     margin-top: 6%;
+    text-align: center;
+    font-size: 18px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
 }
